--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,3 +26,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Deploying to production server on branch $GITHUB_REF"
+  build-cp:
+    if: ${{ github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: cp -f my_test.py ./build/my_test.py
