--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -31,3 +31,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: cp -f ./my_test.py ./build/my_test.py
+      - run: echo `pwd`
+      - run: echo `ls -l`
