--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -32,4 +32,4 @@ jobs:
     steps:
       - run: echo `pwd`
       - run: echo `ls -l`
-      - run: cp -f ./my_test.py ./build/my_test.py
+      - run: cp -f /my_test.py /build/
