--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -31,12 +31,14 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: copy file
-        uses: canastro/copy-action@0.0.2  #canastro/copy-file-action@master
-        with:
-          source: "my_test.py"
-          target: "build/my_test.py"
-      
-      
+    - uses: actions/checkout@v2
+    - name: copy file
+      uses: canastro/copy-action@0.0.2  #canastro/copy-file-action@master
+      with:
+        source: "my_test.py"
+        target: "build/my_test.py"
+    - name: Commit copy
+      run: |
+        git commit -m 'build copy commit'
+        git push origin main    
       
