--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -43,8 +43,8 @@ jobs:
         TOKEN: ${{github.token}}
         REPO: ${{github.repository}}
       run: |
-        git config --global user.name=$USER
-        git config --global user.email='skumar7403@gmail.com'
+        git config --global user.name $USER
+        git config --global user.email 'skumar7403@gmail.com'
         git commit -m 'build copy commit'
         git push -u origin main https://oauth2:$GITHUB_TOKEN@github.com/$REPO.git   
       
